Parziale/Eugenia/ParLua.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParLua.y
-----------------------------------------------------------------------------

state 6 contains 1 shift/reduce conflicts.

terminal 'void' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDec -> Dec                                 (1)
	%start_pStm -> Stm                                 (2)
	%start_pExp -> Exp                                 (3)
	Integer -> L_integ                                 (4)
	Pident -> L_Pident                                 (5)
	Pint -> L_Pint                                     (6)
	Pbool -> L_Pbool                                   (7)
	Pstring -> L_Pstring                               (8)
	Preal -> L_Preal                                   (9)
	Pchar -> L_Pchar                                   (10)
	Program -> ListDec                                 (11)
	ListDec ->                                         (12)
	ListDec -> ListDec Dec                             (13)
	Dec -> 'function' Type_specifier Pident '(' ListArgument ')' ListDecStm 'end'   (14)
	Dec -> 'function' Pident '(' ListArgument ')' ListDecStm 'end'   (15)
	Dec -> Type_specifier Pident                       (16)
	Dec -> Type_specifier Pident '=' Exp               (17)
	Type_specifier -> 'boolean'                        (18)
	Type_specifier -> 'character'                      (19)
	Type_specifier -> 'float'                          (20)
	Type_specifier -> 'integer'                        (21)
	Type_specifier -> 'string'                         (22)
	Type_specifier -> 'pointer' Type_specifier         (23)
	Type_specifier -> '{}' Type_specifier              (24)
	Type_specifier -> '{' Integer '}' Type_specifier   (25)
	Argument -> Modality Type_specifier Pident         (26)
	ListArgument ->                                    (27)
	ListArgument -> Argument                           (28)
	ListArgument -> Argument ',' ListArgument          (29)
	Modality ->                                        (30)
	Modality -> 'val'                                  (31)
	Modality -> 'res'                                  (32)
	Modality -> 'valres'                               (33)
	Modality -> 'name'                                 (34)
	Modality -> 'const'                                (35)
	Modality -> 'ref'                                  (36)
	Stm -> Lexp Assignment_Op Exp                      (37)
	Stm -> 'return' Exp                                (38)
	Stm -> Lexp                                        (39)
	Stm -> 'if' Exp 'then' ListDecStm 'end'            (40)
	Stm -> 'if' Exp 'then' ListDecStm 'else' ListDecStm 'end'   (41)
	Stm -> 'while' Exp 'do' ListDecStm 'end'           (42)
	Stm -> 'repeat' ListDecStm 'until' Exp             (43)
	DecStm -> Dec                                      (44)
	DecStm -> Stm                                      (45)
	ListDecStm ->                                      (46)
	ListDecStm -> ListDecStm DecStm                    (47)
	Exp -> Pident '(' ListExp ')'                      (48)
	Exp -> '(' Exp ')'                                 (49)
	Exp -> Exp 'or' Exp                                (50)
	Exp -> Exp 'and' Exp                               (51)
	Exp -> Exp '==' Exp                                (52)
	Exp -> Exp '~=' Exp                                (53)
	Exp -> Exp '<' Exp                                 (54)
	Exp -> Exp '>' Exp                                 (55)
	Exp -> Exp '<=' Exp                                (56)
	Exp -> Exp '>=' Exp                                (57)
	Exp -> Exp '+' Exp                                 (58)
	Exp -> Exp '-' Exp                                 (59)
	Exp -> Exp '*' Exp                                 (60)
	Exp -> Exp '/' Exp                                 (61)
	Exp -> Exp '^' Exp                                 (62)
	Exp -> Exp '%' Exp                                 (63)
	Exp -> '&' Exp                                     (64)
	Exp -> '-' Exp                                     (65)
	Exp -> 'not' Exp                                   (66)
	Exp -> '{' ListExp '}'                             (67)
	Exp -> Lexp                                        (68)
	Exp -> Preal                                       (69)
	Exp -> Pint                                        (70)
	Exp -> Pbool                                       (71)
	Exp -> Pstring                                     (72)
	Exp -> Pchar                                       (73)
	ListExp ->                                         (74)
	ListExp -> Exp                                     (75)
	ListExp -> Exp ',' ListExp                         (76)
	Lexp -> Pident                                     (77)
	Lexp -> '(' Lexp ')'                               (78)
	Lexp -> '*' Exp                                    (79)
	Lexp -> Exp '{' Exp '}'                            (80)
	Lexp -> '++' Exp                                   (81)
	Lexp -> '--' Exp                                   (82)
	Lexp -> Exp '++'                                   (83)
	Lexp -> Exp '--'                                   (84)
	Assignment_Op -> '='                               (85)
	Assignment_Op -> '*='                              (86)
	Assignment_Op -> '/='                              (87)
	Assignment_Op -> '%='                              (88)
	Assignment_Op -> '+='                              (89)
	Assignment_Op -> '-='                              (90)
	Assignment_Op -> '^='                              (91)
	Assignment_Op -> '&='                              (92)
	Assignment_Op -> '|='                              (93)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'%'            { PT _ (TS _ 1) }
	'%='           { PT _ (TS _ 2) }
	'&'            { PT _ (TS _ 3) }
	'&='           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'*='           { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'/'            { PT _ (TS _ 16) }
	'/='           { PT _ (TS _ 17) }
	'<'            { PT _ (TS _ 18) }
	'<='           { PT _ (TS _ 19) }
	'='            { PT _ (TS _ 20) }
	'=='           { PT _ (TS _ 21) }
	'>'            { PT _ (TS _ 22) }
	'>='           { PT _ (TS _ 23) }
	'^'            { PT _ (TS _ 24) }
	'^='           { PT _ (TS _ 25) }
	'and'          { PT _ (TS _ 26) }
	'boolean'      { PT _ (TS _ 27) }
	'character'    { PT _ (TS _ 28) }
	'const'        { PT _ (TS _ 29) }
	'do'           { PT _ (TS _ 30) }
	'else'         { PT _ (TS _ 31) }
	'end'          { PT _ (TS _ 32) }
	'float'        { PT _ (TS _ 33) }
	'function'     { PT _ (TS _ 34) }
	'if'           { PT _ (TS _ 35) }
	'integer'      { PT _ (TS _ 36) }
	'name'         { PT _ (TS _ 37) }
	'not'          { PT _ (TS _ 38) }
	'or'           { PT _ (TS _ 39) }
	'pointer'      { PT _ (TS _ 40) }
	'ref'          { PT _ (TS _ 41) }
	'repeat'       { PT _ (TS _ 42) }
	'res'          { PT _ (TS _ 43) }
	'return'       { PT _ (TS _ 44) }
	'string'       { PT _ (TS _ 45) }
	'then'         { PT _ (TS _ 46) }
	'until'        { PT _ (TS _ 47) }
	'val'          { PT _ (TS _ 48) }
	'valres'       { PT _ (TS _ 49) }
	'void'         { PT _ (TS _ 50) }
	'while'        { PT _ (TS _ 51) }
	'{'            { PT _ (TS _ 52) }
	'{}'           { PT _ (TS _ 53) }
	'|='           { PT _ (TS _ 54) }
	'}'            { PT _ (TS _ 55) }
	'~='           { PT _ (TS _ 56) }
	L_integ        { PT _ (TI $$) }
	L_Pident       { PT _ (T_Pident _) }
	L_Pint         { PT _ (T_Pint _) }
	L_Pbool        { PT _ (T_Pbool _) }
	L_Pstring      { PT _ (T_Pstring _) }
	L_Preal        { PT _ (T_Preal _) }
	L_Pchar        { PT _ (T_Pchar _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDec     rule  1
	%start_pStm     rule  2
	%start_pExp     rule  3
	Integer         rule  4
	Pident          rule  5
	Pint            rule  6
	Pbool           rule  7
	Pstring         rule  8
	Preal           rule  9
	Pchar           rule  10
	Program         rule  11
	ListDec         rules 12, 13
	Dec             rules 14, 15, 16, 17
	Type_specifier  rules 18, 19, 20, 21, 22, 23, 24, 25
	Argument        rule  26
	ListArgument    rules 27, 28, 29
	Modality        rules 30, 31, 32, 33, 34, 35, 36
	Stm             rules 37, 38, 39, 40, 41, 42, 43
	DecStm          rules 44, 45
	ListDecStm      rules 46, 47
	Exp             rules 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73
	ListExp         rules 74, 75, 76
	Lexp            rules 77, 78, 79, 80, 81, 82, 83, 84
	Assignment_Op   rules 85, 86, 87, 88, 89, 90, 91, 92, 93

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      reduce using rule 12
	'character'    reduce using rule 12
	'float'        reduce using rule 12
	'function'     reduce using rule 12
	'integer'      reduce using rule 12
	'pointer'      reduce using rule 12
	'string'       reduce using rule 12
	'{'            reduce using rule 12
	'{}'           reduce using rule 12
	%eof           reduce using rule 12

	Program        goto state 46
	ListDec        goto state 47

State 1


	'boolean'      shift, and enter state 37
	'character'    shift, and enter state 38
	'float'        shift, and enter state 39
	'function'     shift, and enter state 40
	'integer'      shift, and enter state 41
	'pointer'      shift, and enter state 42
	'string'       shift, and enter state 43
	'{'            shift, and enter state 44
	'{}'           shift, and enter state 45

	Dec            goto state 35
	Type_specifier goto state 36

State 2


	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'*'            shift, and enter state 16
	'++'           shift, and enter state 17
	'-'            shift, and enter state 18
	'--'           shift, and enter state 19
	'if'           shift, and enter state 31
	'not'          shift, and enter state 20
	'repeat'       shift, and enter state 32
	'return'       shift, and enter state 33
	'while'        shift, and enter state 34
	'{'            shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pbool        shift, and enter state 24
	L_Pstring      shift, and enter state 25
	L_Preal        shift, and enter state 26
	L_Pchar        shift, and enter state 27

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Stm            goto state 28
	Exp            goto state 29
	Lexp           goto state 30

State 3


	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'*'            shift, and enter state 16
	'++'           shift, and enter state 17
	'-'            shift, and enter state 18
	'--'           shift, and enter state 19
	'not'          shift, and enter state 20
	'{'            shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pbool        shift, and enter state 24
	L_Pstring      shift, and enter state 25
	L_Preal        shift, and enter state 26
	L_Pchar        shift, and enter state 27

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 12
	Lexp           goto state 13

State 4


	L_integ        shift, and enter state 5


State 5

	Integer -> L_integ .                                (rule 4)

	'}'            reduce using rule 4


State 6

	Exp -> Pident . '(' ListExp ')'                     (rule 48)
	Lexp -> Pident .                                    (rule 77)

	'%'            reduce using rule 77
	'%='           reduce using rule 77
	'&'            reduce using rule 77
	'&='           reduce using rule 77
	'('            shift, and enter state 96
			(reduce using rule 77)

	')'            reduce using rule 77
	'*'            reduce using rule 77
	'*='           reduce using rule 77
	'+'            reduce using rule 77
	'++'           reduce using rule 77
	'+='           reduce using rule 77
	','            reduce using rule 77
	'-'            reduce using rule 77
	'--'           reduce using rule 77
	'-='           reduce using rule 77
	'/'            reduce using rule 77
	'/='           reduce using rule 77
	'<'            reduce using rule 77
	'<='           reduce using rule 77
	'='            reduce using rule 77
	'=='           reduce using rule 77
	'>'            reduce using rule 77
	'>='           reduce using rule 77
	'^'            reduce using rule 77
	'^='           reduce using rule 77
	'and'          reduce using rule 77
	'boolean'      reduce using rule 77
	'character'    reduce using rule 77
	'do'           reduce using rule 77
	'else'         reduce using rule 77
	'end'          reduce using rule 77
	'float'        reduce using rule 77
	'function'     reduce using rule 77
	'if'           reduce using rule 77
	'integer'      reduce using rule 77
	'not'          reduce using rule 77
	'or'           reduce using rule 77
	'pointer'      reduce using rule 77
	'repeat'       reduce using rule 77
	'return'       reduce using rule 77
	'string'       reduce using rule 77
	'then'         reduce using rule 77
	'until'        reduce using rule 77
	'while'        reduce using rule 77
	'{'            reduce using rule 77
	'{}'           reduce using rule 77
	'|='           reduce using rule 77
	'}'            reduce using rule 77
	'~='           reduce using rule 77
	L_Pident       reduce using rule 77
	L_Pint         reduce using rule 77
	L_Pbool        reduce using rule 77
	L_Pstring      reduce using rule 77
	L_Preal        reduce using rule 77
	L_Pchar        reduce using rule 77
	%eof           reduce using rule 77


State 7

	Exp -> Pint .                                       (rule 70)

	'%'            reduce using rule 70
	'%='           reduce using rule 70
	'&'            reduce using rule 70
	'&='           reduce using rule 70
	'('            reduce using rule 70
	')'            reduce using rule 70
	'*'            reduce using rule 70
	'*='           reduce using rule 70
	'+'            reduce using rule 70
	'++'           reduce using rule 70
	'+='           reduce using rule 70
	','            reduce using rule 70
	'-'            reduce using rule 70
	'--'           reduce using rule 70
	'-='           reduce using rule 70
	'/'            reduce using rule 70
	'/='           reduce using rule 70
	'<'            reduce using rule 70
	'<='           reduce using rule 70
	'='            reduce using rule 70
	'=='           reduce using rule 70
	'>'            reduce using rule 70
	'>='           reduce using rule 70
	'^'            reduce using rule 70
	'^='           reduce using rule 70
	'and'          reduce using rule 70
	'boolean'      reduce using rule 70
	'character'    reduce using rule 70
	'do'           reduce using rule 70
	'else'         reduce using rule 70
	'end'          reduce using rule 70
	'float'        reduce using rule 70
	'function'     reduce using rule 70
	'if'           reduce using rule 70
	'integer'      reduce using rule 70
	'not'          reduce using rule 70
	'or'           reduce using rule 70
	'pointer'      reduce using rule 70
	'repeat'       reduce using rule 70
	'return'       reduce using rule 70
	'string'       reduce using rule 70
	'then'         reduce using rule 70
	'until'        reduce using rule 70
	'while'        reduce using rule 70
	'{'            reduce using rule 70
	'{}'           reduce using rule 70
	'|='           reduce using rule 70
	'}'            reduce using rule 70
	'~='           reduce using rule 70
	L_Pident       reduce using rule 70
	L_Pint         reduce using rule 70
	L_Pbool        reduce using rule 70
	L_Pstring      reduce using rule 70
	L_Preal        reduce using rule 70
	L_Pchar        reduce using rule 70
	%eof           reduce using rule 70


State 8

	Exp -> Pbool .                                      (rule 71)

	'%'            reduce using rule 71
	'%='           reduce using rule 71
	'&'            reduce using rule 71
	'&='           reduce using rule 71
	'('            reduce using rule 71
	')'            reduce using rule 71
	'*'            reduce using rule 71
	'*='           reduce using rule 71
	'+'            reduce using rule 71
	'++'           reduce using rule 71
	'+='           reduce using rule 71
	','            reduce using rule 71
	'-'            reduce using rule 71
	'--'           reduce using rule 71
	'-='           reduce using rule 71
	'/'            reduce using rule 71
	'/='           reduce using rule 71
	'<'            reduce using rule 71
	'<='           reduce using rule 71
	'='            reduce using rule 71
	'=='           reduce using rule 71
	'>'            reduce using rule 71
	'>='           reduce using rule 71
	'^'            reduce using rule 71
	'^='           reduce using rule 71
	'and'          reduce using rule 71
	'boolean'      reduce using rule 71
	'character'    reduce using rule 71
	'do'           reduce using rule 71
	'else'         reduce using rule 71
	'end'          reduce using rule 71
	'float'        reduce using rule 71
	'function'     reduce using rule 71
	'if'           reduce using rule 71
	'integer'      reduce using rule 71
	'not'          reduce using rule 71
	'or'           reduce using rule 71
	'pointer'      reduce using rule 71
	'repeat'       reduce using rule 71
	'return'       reduce using rule 71
	'string'       reduce using rule 71
	'then'         reduce using rule 71
	'until'        reduce using rule 71
	'while'        reduce using rule 71
	'{'            reduce using rule 71
	'{}'           reduce using rule 71
	'|='           reduce using rule 71
	'}'            reduce using rule 71
	'~='           reduce using rule 71
	L_Pident       reduce using rule 71
	L_Pint         reduce using rule 71
	L_Pbool        reduce using rule 71
	L_Pstring      reduce using rule 71
	L_Preal        reduce using rule 71
	L_Pchar        reduce using rule 71
	%eof           reduce using rule 71


State 9

	Exp -> Pstring .                                    (rule 72)

	'%'            reduce using rule 72
	'%='           reduce using rule 72
	'&'            reduce using rule 72
	'&='           reduce using rule 72
	'('            reduce using rule 72
	')'            reduce using rule 72
	'*'            reduce using rule 72
	'*='           reduce using rule 72
	'+'            reduce using rule 72
	'++'           reduce using rule 72
	'+='           reduce using rule 72
	','            reduce using rule 72
	'-'            reduce using rule 72
	'--'           reduce using rule 72
	'-='           reduce using rule 72
	'/'            reduce using rule 72
	'/='           reduce using rule 72
	'<'            reduce using rule 72
	'<='           reduce using rule 72
	'='            reduce using rule 72
	'=='           reduce using rule 72
	'>'            reduce using rule 72
	'>='           reduce using rule 72
	'^'            reduce using rule 72
	'^='           reduce using rule 72
	'and'          reduce using rule 72
	'boolean'      reduce using rule 72
	'character'    reduce using rule 72
	'do'           reduce using rule 72
	'else'         reduce using rule 72
	'end'          reduce using rule 72
	'float'        reduce using rule 72
	'function'     reduce using rule 72
	'if'           reduce using rule 72
	'integer'      reduce using rule 72
	'not'          reduce using rule 72
	'or'           reduce using rule 72
	'pointer'      reduce using rule 72
	'repeat'       reduce using rule 72
	'return'       reduce using rule 72
	'string'       reduce using rule 72
	'then'         reduce using rule 72
	'until'        reduce using rule 72
	'while'        reduce using rule 72
	'{'            reduce using rule 72
	'{}'           reduce using rule 72
	'|='           reduce using rule 72
	'}'            reduce using rule 72
	'~='           reduce using rule 72
	L_Pident       reduce using rule 72
	L_Pint         reduce using rule 72
	L_Pbool        reduce using rule 72
	L_Pstring      reduce using rule 72
	L_Preal        reduce using rule 72
	L_Pchar        reduce using rule 72
	%eof           reduce using rule 72


State 10

	Exp -> Preal .                                      (rule 69)

	'%'            reduce using rule 69
	'%='           reduce using rule 69
	'&'            reduce using rule 69
	'&='           reduce using rule 69
	'('            reduce using rule 69
	')'            reduce using rule 69
	'*'            reduce using rule 69
	'*='           reduce using rule 69
	'+'            reduce using rule 69
	'++'           reduce using rule 69
	'+='           reduce using rule 69
	','            reduce using rule 69
	'-'            reduce using rule 69
	'--'           reduce using rule 69
	'-='           reduce using rule 69
	'/'            reduce using rule 69
	'/='           reduce using rule 69
	'<'            reduce using rule 69
	'<='           reduce using rule 69
	'='            reduce using rule 69
	'=='           reduce using rule 69
	'>'            reduce using rule 69
	'>='           reduce using rule 69
	'^'            reduce using rule 69
	'^='           reduce using rule 69
	'and'          reduce using rule 69
	'boolean'      reduce using rule 69
	'character'    reduce using rule 69
	'do'           reduce using rule 69
	'else'         reduce using rule 69
	'end'          reduce using rule 69
	'float'        reduce using rule 69
	'function'     reduce using rule 69
	'if'           reduce using rule 69
	'integer'      reduce using rule 69
	'not'          reduce using rule 69
	'or'           reduce using rule 69
	'pointer'      reduce using rule 69
	'repeat'       reduce using rule 69
	'return'       reduce using rule 69
	'string'       reduce using rule 69
	'then'         reduce using rule 69
	'until'        reduce using rule 69
	'while'        reduce using rule 69
	'{'            reduce using rule 69
	'{}'           reduce using rule 69
	'|='           reduce using rule 69
	'}'            reduce using rule 69
	'~='           reduce using rule 69
	L_Pident       reduce using rule 69
	L_Pint         reduce using rule 69
	L_Pbool        reduce using rule 69
	L_Pstring      reduce using rule 69
	L_Preal        reduce using rule 69
	L_Pchar        reduce using rule 69
	%eof           reduce using rule 69


State 11

	Exp -> Pchar .                                      (rule 73)

	'%'            reduce using rule 73
	'%='           reduce using rule 73
	'&'            reduce using rule 73
	'&='           reduce using rule 73
	'('            reduce using rule 73
	')'            reduce using rule 73
	'*'            reduce using rule 73
	'*='           reduce using rule 73
	'+'            reduce using rule 73
	'++'           reduce using rule 73
	'+='           reduce using rule 73
	','            reduce using rule 73
	'-'            reduce using rule 73
	'--'           reduce using rule 73
	'-='           reduce using rule 73
	'/'            reduce using rule 73
	'/='           reduce using rule 73
	'<'            reduce using rule 73
	'<='           reduce using rule 73
	'='            reduce using rule 73
	'=='           reduce using rule 73
	'>'            reduce using rule 73
	'>='           reduce using rule 73
	'^'            reduce using rule 73
	'^='           reduce using rule 73
	'and'          reduce using rule 73
	'boolean'      reduce using rule 73
	'character'    reduce using rule 73
	'do'           reduce using rule 73
	'else'         reduce using rule 73
	'end'          reduce using rule 73
	'float'        reduce using rule 73
	'function'     reduce using rule 73
	'if'           reduce using rule 73
	'integer'      reduce using rule 73
	'not'          reduce using rule 73
	'or'           reduce using rule 73
	'pointer'      reduce using rule 73
	'repeat'       reduce using rule 73
	'return'       reduce using rule 73
	'string'       reduce using rule 73
	'then'         reduce using rule 73
	'until'        reduce using rule 73
	'while'        reduce using rule 73
	'{'            reduce using rule 73
	'{}'           reduce using rule 73
	'|='           reduce using rule 73
	'}'            reduce using rule 73
	'~='           reduce using rule 73
	L_Pident       reduce using rule 73
	L_Pint         reduce using rule 73
	L_Pbool        reduce using rule 73
	L_Pstring      reduce using rule 73
	L_Preal        reduce using rule 73
	L_Pchar        reduce using rule 73
	%eof           reduce using rule 73


State 12

	%start_pExp -> Exp .                                (rule 3)
	Exp -> Exp . 'or' Exp                               (rule 50)
	Exp -> Exp . 'and' Exp                              (rule 51)
	Exp -> Exp . '==' Exp                               (rule 52)
	Exp -> Exp . '~=' Exp                               (rule 53)
	Exp -> Exp . '<' Exp                                (rule 54)
	Exp -> Exp . '>' Exp                                (rule 55)
	Exp -> Exp . '<=' Exp                               (rule 56)
	Exp -> Exp . '>=' Exp                               (rule 57)
	Exp -> Exp . '+' Exp                                (rule 58)
	Exp -> Exp . '-' Exp                                (rule 59)
	Exp -> Exp . '*' Exp                                (rule 60)
	Exp -> Exp . '/' Exp                                (rule 61)
	Exp -> Exp . '^' Exp                                (rule 62)
	Exp -> Exp . '%' Exp                                (rule 63)
	Lexp -> Exp . '{' Exp '}'                           (rule 80)
	Lexp -> Exp . '++'                                  (rule 83)
	Lexp -> Exp . '--'                                  (rule 84)

	'%'            shift, and enter state 69
	'*'            shift, and enter state 70
	'+'            shift, and enter state 71
	'++'           shift, and enter state 72
	'-'            shift, and enter state 73
	'--'           shift, and enter state 74
	'/'            shift, and enter state 75
	'<'            shift, and enter state 76
	'<='           shift, and enter state 77
	'=='           shift, and enter state 78
	'>'            shift, and enter state 79
	'>='           shift, and enter state 80
	'^'            shift, and enter state 81
	'and'          shift, and enter state 82
	'or'           shift, and enter state 83
	'{'            shift, and enter state 84
	'~='           shift, and enter state 85
	%eof           accept


State 13

	Exp -> Lexp .                                       (rule 68)

	'%'            reduce using rule 68
	'%='           reduce using rule 68
	'&'            reduce using rule 68
	'&='           reduce using rule 68
	'('            reduce using rule 68
	')'            reduce using rule 68
	'*'            reduce using rule 68
	'*='           reduce using rule 68
	'+'            reduce using rule 68
	'++'           reduce using rule 68
	'+='           reduce using rule 68
	','            reduce using rule 68
	'-'            reduce using rule 68
	'--'           reduce using rule 68
	'-='           reduce using rule 68
	'/'            reduce using rule 68
	'/='           reduce using rule 68
	'<'            reduce using rule 68
	'<='           reduce using rule 68
	'='            reduce using rule 68
	'=='           reduce using rule 68
	'>'            reduce using rule 68
	'>='           reduce using rule 68
	'^'            reduce using rule 68
	'^='           reduce using rule 68
	'and'          reduce using rule 68
	'boolean'      reduce using rule 68
	'character'    reduce using rule 68
	'do'           reduce using rule 68
	'else'         reduce using rule 68
	'end'          reduce using rule 68
	'float'        reduce using rule 68
	'function'     reduce using rule 68
	'if'           reduce using rule 68
	'integer'      reduce using rule 68
	'not'          reduce using rule 68
	'or'           reduce using rule 68
	'pointer'      reduce using rule 68
	'repeat'       reduce using rule 68
	'return'       reduce using rule 68
	'string'       reduce using rule 68
	'then'         reduce using rule 68
	'until'        reduce using rule 68
	'while'        reduce using rule 68
	'{'            reduce using rule 68
	'{}'           reduce using rule 68
	'|='           reduce using rule 68
	'}'            reduce using rule 68
	'~='           reduce using rule 68
	L_Pident       reduce using rule 68
	L_Pint         reduce using rule 68
	L_Pbool        reduce using rule 68
	L_Pstring      reduce using rule 68
	L_Preal        reduce using rule 68
	L_Pchar        reduce using rule 68
	%eof           reduce using rule 68


State 14

	Exp -> '&' . Exp                                    (rule 64)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'*'            shift, and enter state 16
	'++'           shift, and enter state 17
	'-'            shift, and enter state 18
	'--'           shift, and enter state 19
	'not'          shift, and enter state 20
	'{'            shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pbool        shift, and enter state 24
	L_Pstring      shift, and enter state 25
	L_Preal        shift, and enter state 26
	L_Pchar        shift, and enter state 27

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 95
	Lexp           goto state 13

State 15

	Exp -> '(' . Exp ')'                                (rule 49)
	Lexp -> '(' . Lexp ')'                              (rule 78)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'*'            shift, and enter state 16
	'++'           shift, and enter state 17
	'-'            shift, and enter state 18
	'--'           shift, and enter state 19
	'not'          shift, and enter state 20
	'{'            shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pbool        shift, and enter state 24
	L_Pstring      shift, and enter state 25
	L_Preal        shift, and enter state 26
	L_Pchar        shift, and enter state 27

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 93
	Lexp           goto state 94

State 16

	Lexp -> '*' . Exp                                   (rule 79)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'*'            shift, and enter state 16
	'++'           shift, and enter state 17
	'-'            shift, and enter state 18
	'--'           shift, and enter state 19
	'not'          shift, and enter state 20
	'{'            shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pbool        shift, and enter state 24
	L_Pstring      shift, and enter state 25
	L_Preal        shift, and enter state 26
	L_Pchar        shift, and enter state 27

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 92
	Lexp           goto state 13

State 17

	Lexp -> '++' . Exp                                  (rule 81)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'*'            shift, and enter state 16
	'++'           shift, and enter state 17
	'-'            shift, and enter state 18
	'--'           shift, and enter state 19
	'not'          shift, and enter state 20
	'{'            shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pbool        shift, and enter state 24
	L_Pstring      shift, and enter state 25
	L_Preal        shift, and enter state 26
	L_Pchar        shift, and enter state 27

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 91
	Lexp           goto state 13

State 18

	Exp -> '-' . Exp                                    (rule 65)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'*'            shift, and enter state 16
	'++'           shift, and enter state 17
	'-'            shift, and enter state 18
	'--'           shift, and enter state 19
	'not'          shift, and enter state 20
	'{'            shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pbool        shift, and enter state 24
	L_Pstring      shift, and enter state 25
	L_Preal        shift, and enter state 26
	L_Pchar        shift, and enter state 27

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 90
	Lexp           goto state 13

State 19

	Lexp -> '--' . Exp                                  (rule 82)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'*'            shift, and enter state 16
	'++'           shift, and enter state 17
	'-'            shift, and enter state 18
	'--'           shift, and enter state 19
	'not'          shift, and enter state 20
	'{'            shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pbool        shift, and enter state 24
	L_Pstring      shift, and enter state 25
	L_Preal        shift, and enter state 26
	L_Pchar        shift, and enter state 27

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 89
	Lexp           goto state 13

State 20

	Exp -> 'not' . Exp                                  (rule 66)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'*'            shift, and enter state 16
	'++'           shift, and enter state 17
	'-'            shift, and enter state 18
	'--'           shift, and enter state 19
	'not'          shift, and enter state 20
	'{'            shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pbool        shift, and enter state 24
	L_Pstring      shift, and enter state 25
	L_Preal        shift, and enter state 26
	L_Pchar        shift, and enter state 27

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 88
	Lexp           goto state 13

State 21

	Exp -> '{' . ListExp '}'                            (rule 67)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'*'            shift, and enter state 16
	'++'           shift, and enter state 17
	'-'            shift, and enter state 18
	'--'           shift, and enter state 19
	'not'          shift, and enter state 20
	'{'            shift, and enter state 21
	'}'            reduce using rule 74
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pbool        shift, and enter state 24
	L_Pstring      shift, and enter state 25
	L_Preal        shift, and enter state 26
	L_Pchar        shift, and enter state 27

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 86
	ListExp        goto state 87
	Lexp           goto state 13

State 22

	Pident -> L_Pident .                                (rule 5)
